--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@700&display=swap" rel="stylesheet">
     <title>TEST</title>
 </head>
-<body>
+<body class="light">
     <div class="global">
         <header>
             <div class="logo">
@@ -31,6 +31,7 @@
                 <a class="hover_icon" href="#"><img class="icon" src="pics/twitter.png" alt="Icon Twitter"></a>
                 <a class="hover_icon" href="#"><img class="icon" src="pics/github.png" alt="Icon Github"></a>
                 <a class="hover_icon" href="#"><img class="icon" src="pics/discord.png" alt="Icon Discord"></a>
+                <div class="btn-toggle"><img class="icon_switch" src="pics/lune.png"></div>
             </div>
         </header>
 
@@ -40,14 +41,14 @@
             </div>
             <div class="text_bienvenue">
                 <h1><span class="ligne">Welcome</span> to</br>
-                my first website.</h1>
+                my first website<span class="color_text">.</span></h1>
             </div>
         </div>
 
-        <footer>
-            <p>Copyright © 2022 Brunch Studio</br>
-            Made by Yushiko</p>
+        <footer class="footer">
+            <p>Copyright © 2022 - Made by Yushiko</p>
         </footer>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
